<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.assignments.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:text="@string/Red"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:layout_weight="0.14"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff7f00"
        android:text="@string/Orange"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_weight="0.14"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff00"
        android:text="@string/Yellow"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_weight="0.14"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ff00"
        android:text="@string/Green"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_weight="0.14"
        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000ff"
        android:text="@string/Blue"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:layout_weight="0.14"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4b0082"
        android:text="@string/Indigo"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:layout_weight="0.14"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9400d3"
        android:text="@string/violet"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:layout_weight="0.14"
        android:textAlignment="center"
        />



</LinearLayout>



